remove some projects and update description

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,20 +7,27 @@
           Born and raised in Brazil (now living in Dublin - Ireland).
         </p>
         <p class="lead">
-          Self-taught, curious and passionate to create new things.
+          I am self-taught, curious and passionate to create new things.
         </p>
         <p class="lead">
           I like to make people's life easier with web technologies and beutifull designers.
         </p>
         <p class="lead">
-          I have more than 5 years of experience in web development, maintenance of web systems and building webpages. 
-          During these years I worked with web technologies and learned how to work in team.
+          I have more than 3 years of experience on web development, maintenance of web systems 
+          at companies and creating web applications.
+          During these years I have been working with web technologies like PHP, Javascript(ES6+, 
+          JQuery, Angular, React), HTML5, CSS3(Bootstrap 3+, SASS, FlexBox, Grid), and databases 
+          like PostGree, MySql and Oracle(PL/SQL).
         </p>
         <p class="lead">
-          If I face a problem, I looking for ways to fix it. I do my best to delivery the best crafts.
+          I have both technical and interpersonal skills and I am looking for a challenger 
+          role that I can combine my previous skills and experiences with my new income learnings.
         </p>
         <p class="lead">
-          As a music lover you can find me playing guitar or reading some book in my free time.
+          When I face a problem, I looking for ways to fix it. I do my best to delivery the best crafts.
+        </p>
+        <p class="lead">
+          As a music lover you can find me playing guitar on my free time and I also love nerd/geek stuff.
         </p>
       </div>
     </div>
